# BeamDrop

./: .clangd  .gitignore  BeamDrop CLI smoke test  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  run_windows_dev.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  event_bus.py  fake_native_gateway.py  native_gateway.py  receiver_manager.py  task_manager.py
backend/app/schemas/: __init__.py  contracts.py  wire.py
backend/tests/: test_native_gateway.py  test_receiver_manager.py  test_rest_api.py  test_task_manager.py  test_websocket_events.py
bindings/python/: CMakeLists.txt  beamdrop_pybind.cpp
bindings/python/tests/: test_beamdrop_native.py
config/: beamdrop.example.json
docs/: FastAPI-TypeScript DTO对照.md  GUI交付与演示指南.md  GUI界面开发实施计划.md  MVP实施计划.md  协议设计.md  命令行设计.md  大文件传输性能优化计划.md  开发日志.md  总体设计.md  断点续传实施计划.md  进程常驻实施计划.md  需求分析.md
docs/开发日志/: 2026-06-29.md  2026-06-30.md  2026-07-02.md  2026-07-03.md  2026-07-09.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md
frontend/: README.md  components.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: background-paths.tsx  badge.tsx  button.tsx  input.tsx  progress.tsx
frontend/src/features/dashboard/: dashboardState.test.ts  dashboardState.ts  useBeamDropDashboard.ts
frontend/src/features/receiver/: ReceiverPanel.tsx
frontend/src/features/send/: SendPanel.tsx
frontend/src/features/tasks/: TaskList.tsx
frontend/src/platform/: BeamDropApi.ts  createBeamDropApi.ts  errors.ts
frontend/src/platform/fastapi/: FastApiAdapter.test.ts  FastApiAdapter.ts
frontend/src/platform/mock/: MockBeamDropApi.ts
frontend/src/platform/tauri/: TauriAdapter.ts
frontend/src/platform/testing/: contract.typecheck.ts
include/beamdrop/app/: ReceiveServerService.hpp  ReceiveService.hpp  SendService.hpp  TransferTask.hpp
include/beamdrop/config/: AppConfig.hpp
include/beamdrop/filesystem/: FileScanner.hpp  FileSystemError.hpp  FileUtils.hpp
include/beamdrop/logger/: Logger.hpp
include/beamdrop/network/: NetworkError.hpp  TcpClient.hpp  TcpConnection.hpp  TcpServer.hpp
include/beamdrop/protocol/: Packet.hpp  PacketHeader.hpp  PacketIO.hpp  PacketParser.hpp  PacketType.hpp  Serializer.hpp
include/beamdrop/transfer/: DirectoryInfoCodec.hpp  FileInfo.hpp  FileInfoCodec.hpp  Progress.hpp  Receiver.hpp  ResumeAckCodec.hpp  ResumeManager.hpp  Sender.hpp  TransferError.hpp  TransferManifest.hpp
include/beamdrop/utils/: Sha256.hpp
scripts/: generate_course_report.py  generate_ppt.py
src/: main.cpp
src/app/: ReceiveServerService.cpp  ReceiveService.cpp  SendService.cpp
src/config/: AppConfig.cpp
src/filesystem/: FileScanner.cpp  FileUtils.cpp
src/logger/: Logger.cpp
src/network/: SocketPlatform.hpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp
src/protocol/: PacketIO.cpp  PacketParser.cpp  Serializer.cpp
src/transfer/: DirectoryInfoCodec.cpp  FileInfoCodec.cpp  Receiver.cpp  ResumeAckCodec.cpp  ResumeManager.cpp  Sender.cpp  TransferManifest.cpp
src/utils/: Sha256.cpp
tests/: integration_test_runner.cpp  unit_test_runner.cpp
tests/integration/: app_receive_server_service_tests.cpp  app_service_single_file_transfer_tests.cpp  cli_serve_smoke.ps1  directory_transfer_tests.cpp  persistent_serve_tests.cpp  resume_transfer_tests.cpp  single_file_transfer_tests.cpp  tcp_hello_tests.cpp  tcp_server_timeout_tests.cpp
tests/unit/: app_receive_service_tests.cpp  app_send_service_tests.cpp  app_transfer_task_tests.cpp  config_tests.cpp  file_info_codec_tests.cpp  file_scanner_tests.cpp  logger_tests.cpp  protocol_tests.cpp  resume_ack_codec_tests.cpp  resume_manager_tests.cpp  sha256_tests.cpp  transfer_manifest_tests.cpp
